# ts-thin-ql

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose-tests.yml  docker-compose.yml  docs.gql  main.sql  main.tql  main.ts  old.sql  package-lock.json  package.json  schema-old.sql  schema-run.sql  schema.sql  scratch.sql  tsconfig.json  unescape.ts  working.md
lib/: ast.ts  grammar.peg  grammar.spec.ts  index.spec.ts  index.ts  inspect.spec.ts  inspect.sql  inspect.ts  inspect_pg_types.ts  utils.spec.ts  utils.ts
lib/inspect/: __utils.sql  _functions.sql  _procedures.sql  _tables.sql  _types.sql  index.spec.ts  index.ts  pg_types.ts
lib/render/: _examples.tql  grammar.spec.ts  (+6 more)
old/: index.ts  inspect.ts  notes.sql  parser.ts  utils.ts
schemas/: _functions.sql  _insert.spec.ts  _patch.spec.ts  _put.spec.ts  _query.spec.ts  blog.sql  blog.ts  ecommerce.sql  question_answer.sql  simple-layers.sql  simple-through.sql  simple_layers.sql
server/: generated.rs  macros.rs  main.rs
src/: ast.ts  astClasses.ts  astClasses_old.js  astInsert.ts  astQuery.ts  docs.gql  index.ts  inspect.js  inspect.sql  inspect.ts  inspect_pg_types.ts  inspectionClasses.ts  inspectionQuery.sql  loader.ts  notes.sql  parser.js  parser.ts  parserUtils.ts  pgTypes.ts  render.spec.ts  render.ts  render_sql.spec.ts  render_sql.ts  testSrc.gql  utils.spec.ts  utils.ts
tests/: astClasses.spec.ts  astQuery.spec.ts  inspect.spec.ts  integration.spec.js  integration.spec.ts  loader.spec.tql  loader.spec.ts  parser.spec.js  parser.spec.ts  utils.d.ts  utils.js  utils.ts
(+17 files in other folders)
